--- a/bo_example_stepped.ipynb
+++ b/bo_example_stepped.ipynb
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "# do optimization loop with ucb\n",
+    "# do optimization loop with expected improvement\n",
     "from botorch.acquisition import ExpectedImprovement\n",
     "from botorch.optim import optimize_acqf\n",
     "\n",
